<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".biologie"
    android:background="@drawable/background3"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ss"
        android:layout_gravity="center"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myColor"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/curs"
                android:layout_width="255dp"
                android:layout_height="155dp"
                android:src="@drawable/cursbio"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/video"
                android:layout_width="255dp"
                android:layout_height="155dp"
                android:src="@drawable/video"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/audio"
                android:layout_width="255dp"
                android:layout_height="155dp"
                android:src="@drawable/audio"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/puzzle"
                android:layout_width="255dp"
                android:layout_height="155dp"
                android:src="@drawable/puzzle"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/test"
                android:layout_width="255dp"
                android:layout_height="155dp"
                android:src="@drawable/test"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>



    </HorizontalScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myColor"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="2dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bio1"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:src="@drawable/bb1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bio3"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:src="@drawable/bio3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bio4"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:src="@drawable/bio4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bio5"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:src="@drawable/bio5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bio6"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>